# NH3API

./: CMakeLists.txt  LICENSE  README.md  cheats.hpp  legacy.hpp
core/: CAutoArray.hpp  adventure.cpp  adventure.hpp  adventure_AI.hpp  army.hpp  base_manager.hpp  campaign.hpp  creatures.hpp  hero.cpp  hero.hpp  hexcell.hpp  lossvictory.hpp  map_header.hpp  player.hpp  random.hpp  skills.cpp  skills.hpp  spells.hpp  terrain.hpp  utils.hpp  vftables.hpp
core/interface/: dialogs.hpp  interface_include.hpp  widgets.hpp  window_manager.cpp
core/nh3api_std/: TRefCountingPtr.hpp  array.hpp  exe_rbtree.hpp  exe_string.hpp  exe_vector.hpp  ida.hpp  nh3api_debug.hpp  type_traits.hpp
core/nh3api_std/type_traits/: check.hpp  common.hpp  function.hpp  type_traits_cxx98.hpp
core/resources/: resources_include.hpp  sound.cpp
debugging/: nh3api_std.natvis  readme.md
nh3api/: .clang-format  .clangd  cdplay.hpp  chat_manager.hpp  cheats.hpp  core.hpp  hd_mod.hpp  input_manager.hpp  legacy.hpp  mouse.hpp  sound_manager.hpp  turn.cpp  turn.hpp  video.hpp
nh3api/core/: CAutoArray.hpp  adventure.cpp  adventure.hpp  adventure_AI.cpp  adventure_AI.hpp  army.hpp  artifact.cpp  artifact.hpp  base_manager.cpp  base_manager.hpp  bstruct.hpp  campaign.hpp  combat.cpp  combat.hpp  combat_AI.hpp  creatures.cpp  creatures.hpp  events.cpp  events.hpp  game_setup.hpp  global.cpp  global.hpp  hero.cpp  hero.hpp  hero_enums.hpp  hexcell.hpp  input_manager.cpp  input_manager.hpp  lossvictory.hpp  map.cpp  map.hpp  map_header.hpp  mouse.cpp  mouse.hpp  multiplayer.hpp  objects.hpp  pathfinding.cpp  pathfinding.hpp  player.cpp  player.hpp  (+14 more)
nh3api/core/interface/: chat_manager.cpp  chat_manager.hpp  dialogs.hpp  interface_vftables.hpp  key_codes.hpp  recruit_unit.hpp  widgets.hpp  window_manager.cpp  window_manager.hpp  windows.cpp  windows.hpp
nh3api/core/nh3api_std/: TRefCountingPtr.hpp  algorithm.hpp  array.hpp  call_macros.hpp  char_traits.hpp  enum_limits.hpp  exe_bitset.hpp  exe_crt.hpp  exe_deque.hpp  exe_map.hpp  exe_rbtree.hpp  exe_rtti.hpp  exe_set.hpp  exe_streambuf.hpp  exe_streambuf_vftables.hpp  exe_string.hpp  exe_vector.hpp  hash.hpp  ida.hpp  intrin.hpp  iterator.hpp  math.hpp  memory.hpp  nh3api_debug.hpp  nh3api_exceptions.hpp  nh3api_std.hpp  patcher_x86.hpp  point.hpp  readme  stl_extras.hpp  type_traits.hpp
nh3api/core/nh3api_std/type_traits/: add_xyz.hpp  check.hpp  common.hpp  function.hpp  integral_constant.hpp  is_xyz.hpp  remove_xyz.hpp  type_traits_cxx98.hpp
nh3api/core/resources/: files.hpp  files_vftables.hpp  resource_enums.hpp  resources.cpp  resources.hpp  resources_include.hpp  resources_vftables.hpp  sound.cpp  sound.hpp  sounds.hpp
nh3api/era/: era.cpp  era.def  era.exp  era.hpp  era.lib  readme.md
tests/: readme.md
visual_studio/: readme.md
